tests/header_eof.err_exp
header_eof.inp:1: error: in field #2, expected 3 fields in header: actual 2
