tests/header_eof.inp
field1,field2
aaa,bbb,ccc
